--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -24,6 +25,7 @@
     </header>
     <section class="banner">
         <div class="banner__wrap">
+            <div class="container"></div>
             <h1 class="banner__heading">Добро пожаловать на мой сайт </h1>
             <button class="banner__btn">Позвонить</button>
         </div>
